--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,7 +10,7 @@ build: off
 build_script:
   - yarn run build # команда сборки
 test_script:
-- yarn run lint && yarn e2e # скрипт тестирования
+- yarn run lint # скрипт тестирования
 deploy_script: # скрипт развёртывания
   - git config --global credential.helper store
   - git config --global user.name AppVeyor
