--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test": "jest --passWithNoTests",
     "e2e":"jest --testPathPattern=./e2e/ --runInBand"
   },
-  "author": "Valerie Sidorova",
+  "author": "zarajskysam",
   "license": "MIT",
   "dependencies": {
     "core-js": "3",
